update service ip

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.datasource.db-kind=db2
-quarkus.datasource.jdbc.url=jdbc:db2://10.253.1.21:50000/DLTUAT:currentSchema=TABS;
-quarkus.datasource.username=apptab
-quarkus.datasource.password=apptab
+quarkus.datasource.jdbc.url=jdbc:db2://157.179.19.157:50000/POCDLT:currentSchema=POC;
+quarkus.datasource.username=poc
+quarkus.datasource.password=poc
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=none
