--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,11 @@
 quarkus.datasource.db-kind=db2
-quarkus.datasource.jdbc.url=jdbc:db2://10.253.1.21:50000/DLTUAT:currentSchema=TABS;
-quarkus.datasource.username=apptab
-quarkus.datasource.password=apptab
+quarkus.datasource.jdbc.url=jdbc:db2://157.179.19.156:50000/POCDLT:currentSchema=POC;
+quarkus.datasource.username=poc
+quarkus.datasource.password=poc
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
-# Primary datasource configuration
-# quarkus.datasource."primary".db-kind=db2
-# quarkus.datasource."primary".jdbc.url=jdbc:db2://10.253.1.21:50000/DLTUAT:currentSchema=TABS
-# quarkus.datasource."primary".username=apptab
-# quarkus.datasource."primary".password=apptab
-# quarkus.datasource."primary".jdbc.max-size=8
-# quarkus.datasource."primary".jdbc.min-size=2
-# quarkus.hibernate-orm."primary".database.generation=none
-# quarkus.hibernate-orm."primary".log.sql=true
-# quarkus.hibernate-orm."primary".sql-load-script=import.sql
-# quarkus.hibernate-orm."primary".packages=th.co.cdgs.department,th.co.cdgs.employee
-# Secondary datasource configuration
-# quarkus.datasource."secondary".db-kind=db2
-# quarkus.datasource."secondary".jdbc.url=jdbc:db2://10.253.1.21:50000/DLTUAT:currentSchema=TABS
-# quarkus.datasource."secondary".username=apptab
-# quarkus.datasource."secondary".password=apptab
-# quarkus.datasource."secondary".jdbc.max-size=8
-# quarkus.datasource."secondary".jdbc.min-size=2
-# quarkus.hibernate-orm."secondary".database.generation=none
-# quarkus.hibernate-orm."secondary".log.sql=true
-# quarkus.hibernate-orm."secondary".sql-load-script=import.sql
-# quarkus.hibernate-orm."secondary".packages=th.co.cdgs.department,th.co.cdgs.employee
-# Other configurations
 quarkus.http.root-path=/api
 quarkus.http.port=8081
